RESOLVED FIXED34749
[Qt] QScriptEngine should contain nullValue and undefinedValue methods
https://bugs.webkit.org/show_bug.cgi?id=34749
Summary [Qt] QScriptEngine should contain nullValue and undefinedValue methods
Jędrzej Nowacki
Reported 2010-02-09 06:56:18 PST
Current implementation of QtScript's QScriptEngine is lacking nullValue() and undefinedValue() methods. The methods should return a null and an undefined QScriptValues.
Attachments
Fix v1 (3.13 KB, patch)
2010-02-09 07:01 PST, Jędrzej Nowacki
no flags
Jędrzej Nowacki
Comment 1 2010-02-09 07:01:42 PST
Created attachment 48410 [details] Fix v1 Implementation of the functions
WebKit Commit Bot
Comment 2 2010-02-09 18:53:11 PST
Comment on attachment 48410 [details] Fix v1 Clearing flags on attachment: 48410 Committed r54580: <http://trac.webkit.org/changeset/54580>
WebKit Commit Bot
Comment 3 2010-02-09 18:53:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.