2010-02-09  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Simon Hausmann.

        New functions nullValue() and undefinedValue().

        [Qt] QScriptEngine should contain nullValue and undefinedValue methods
        https://bugs.webkit.org/show_bug.cgi?id=34749

        * qt/api/qscriptengine.cpp:
        (QScriptEngine::nullValue):
        (QScriptEngine::undefinedValue):
        * qt/api/qscriptengine.h:
        * qt/tests/qscriptengine/tst_qscriptengine.cpp:
        (tst_QScriptEngine::nullValue):
        (tst_QScriptEngine::undefinedValue):

Canonical link: https://commits.webkit.org/45892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54580 268f45cc-cd09-0410-ab3c-d52691b4dbfc